# rust-dms-cdc-operator

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml  rust-toolchain.toml
.github/workflows/: ci.yaml  git.yaml
dms-cdc-operator-client/: Cargo.toml
dms-cdc-operator-client/src/: main.rs
rust-cdc-validator-client/: Cargo.toml
rust-cdc-validator-client/src/: main.rs
src/: lib.rs  main.rs
src/cdc/: cdc_operator.rs  cdc_operator_mode.rs  cdc_operator_payload.rs  mod.rs  snapshot_payload.rs  validate_payload.rs
src/dataframe/: dataframe_ops.rs  mod.rs
src/postgres/: deadpool_postgres_operator_impl.rs  mod.rs  postgres_config.rs  postgres_geometry_type.rs  postgres_geometry_type_tests.rs  postgres_operator.rs  postgres_operator_impl.rs  postgres_operator_tests.rs  postgres_ops.rs  postgres_ops_tests.rs  postgres_row_struct.rs  table_mode.rs  table_query.rs
src/s3/: mod.rs  s3_operator.rs  s3_operator_tests.rs  s3_ops.rs  s3_ops_tests.rs
src/validate/: mod.rs  validator.rs  validator_payload.rs
