[package]
name = "dms-cdc-operator"
version = "0.1.14"
edition = "2021"
license = "MIT"
description = "The dms-cdc-operator is a Rust-based utility for comparing the state of a list of tables in an Amazon RDS database with data stored in Parquet files on Amazon S3, particularly useful for change data capture (CDC) scenarios"
readme = "README.md"
homepage = "https://github.com/nikoshet/rust-dms-cdc-operator"
repository = "https://github.com/nikoshet/rust-dms-cdc-operator"
keywords = ["postgres", "s3", "cdc", "parquet", "polars"]
documentation = "https://docs.rs/dms-cdc-operator"
exclude = ["script.sh"]

[workspace]
members = ["dms-cdc-operator-client"]

[workspace.dependencies]
aws-sdk-s3 = "1.21.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4.21"
colored = "2.1.0"
polars = { version = "0.40.0", features = [
    "timezones",
    "json",
    "lazy",
    "aws",
    "parquet",
    "dtype-decimal",
    "streaming",
    "strings",
] }
chrono = "0.4.37"
async-trait = "0.1.79"
rust-pgdatadiff = "0.1.6"
indexmap = { version = "2.2.6", features = ["serde"] }
polars-core = "0.40.0"
rust_decimal = "1.35.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
deadpool-postgres = "0.14.0"
futures = "0.3.30"
clap = "4.5.4"
mockall = "0.12.1"
cargo-nextest = "0.9.72"
dms-cdc-operator = { path = ".", version = "0.1.12" }
native-tls = "0.2.12"
postgres-native-tls = "0.5.0"

[dependencies]
indexmap.workspace = true
polars-core.workspace = true
polars.workspace = true
tokio.workspace = true
anyhow.workspace = true
aws-sdk-s3.workspace = true
log.workspace = true
colored.workspace = true
chrono.workspace = true
async-trait.workspace = true
rust-pgdatadiff.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
deadpool-postgres.workspace = true
futures.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
postgres-native-tls.workspace = true
native-tls.workspace = true

[dev-dependencies]
mockall.workspace = true
cargo-nextest.workspace = true

[lib]
test = true
edition = "2021"
crate-type = ["lib"]
name = "dms_cdc_operator"
