[package]
name = "dms-cdc-operator"
version = "0.1.20"
edition = "2021"
license = "MIT"
description = "The dms-cdc-operator is a Rust-based utility for comparing the state of a list of tables in an Amazon RDS database with data stored in Parquet files on Amazon S3, particularly useful for change data capture (CDC) scenarios"
readme = "README.md"
homepage = "https://github.com/nikoshet/rust-dms-cdc-operator"
repository = "https://github.com/nikoshet/rust-dms-cdc-operator"
keywords = ["postgres", "s3", "cdc", "parquet", "polars"]
documentation = "https://docs.rs/dms-cdc-operator"
exclude = ["script.sh"]

[workspace]
members = ["dms-cdc-operator-client"]

[workspace.dependencies]
aws-sdk-s3 = "1.66.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4.21"
colored = "2.2.0"
polars = { version = "0.45.1", features = [
    "timezones",
    "json",
    "lazy",
    "aws",
    "parquet",
    "dtype-decimal",
    "streaming",
    "strings",
] }
polars-core = "0.45.1"
chrono = "0.4.39"
async-trait = "0.1.83"
rust-pgdatadiff = "0.1.7"
indexmap = { version = "2.7.0", features = ["serde"] }
rust_decimal = "1.36.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
deadpool-postgres = "0.14.0"
futures = "0.3.31"
clap = "4.5.23"
mockall = "0.13.1"
cargo-nextest = "0.9.87"
dms-cdc-operator = { path = ".", version = "0.1" }
native-tls = "0.2.12"
postgres-native-tls = "0.5.0"
bon = "3.3"

[dependencies]
indexmap.workspace = true
polars-core.workspace = true
polars.workspace = true
tokio.workspace = true
anyhow.workspace = true
aws-sdk-s3.workspace = true
log.workspace = true
colored.workspace = true
chrono.workspace = true
async-trait.workspace = true
rust-pgdatadiff.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
deadpool-postgres.workspace = true
futures.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
postgres-native-tls.workspace = true
native-tls.workspace = true
bon.workspace = true

[dev-dependencies]
mockall.workspace = true
cargo-nextest.workspace = true

[lib]
test = true
edition = "2021"
crate-type = ["lib"]
name = "dms_cdc_operator"
