[package]
name = "dms-cdc-operator"
version = "0.1.22"
edition = "2024"
license = "MIT"
description = "The dms-cdc-operator is a Rust-based utility for comparing the state of a list of tables in an Amazon RDS database with data stored in Parquet files on Amazon S3, particularly useful for change data capture (CDC) scenarios"
readme = "README.md"
homepage = "https://github.com/nikoshet/rust-dms-cdc-operator"
repository = "https://github.com/nikoshet/rust-dms-cdc-operator"
keywords = ["postgres", "s3", "cdc", "parquet", "polars"]
documentation = "https://docs.rs/dms-cdc-operator"
exclude = ["script.sh"]

[workspace]
members = ["dms-cdc-operator-client"]

[workspace.dependencies]
aws-sdk-s3 = "1.85.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4.25"
colored = "3.0.0"
polars = { git = "https://github.com/pola-rs/polars", branch = "main", features = [
    "aws",
    "dtype-decimal",
    "json",
    "lazy",
    "new_streaming",
    "parquet",
    "streaming",
    "strings",
    "timezones",
] }
# polars = { version = "0.46.0", features = [
#     "timezones",
#     "json",
#     "lazy",
#     "aws",
#     "parquet",
#     "dtype-decimal",
#     "streaming",
#     "strings",
# ] }
# polars-core = "0.46.0"
chrono = "0.4.39"
async-trait = "0.1.86"
rust-pgdatadiff = "0.1.8"
indexmap = { version = "2.7.1", features = ["serde"] }
rust_decimal = "1.36.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
deadpool-postgres = "0.14.1"
futures = "0.3.31"
clap = "4.5.28"
mockall = "0.13.1"
cargo-nextest = "0.9.88"
dms-cdc-operator = { path = ".", version = "0.1" }
native-tls = "0.2.13"
postgres-native-tls = "0.5.1"
bon = "3.3.2"

[dependencies]
indexmap.workspace = true
polars.workspace = true
tokio.workspace = true
anyhow.workspace = true
aws-sdk-s3.workspace = true
log.workspace = true
colored.workspace = true
chrono.workspace = true
async-trait.workspace = true
rust-pgdatadiff.workspace = true
rust_decimal.workspace = true
tracing.workspace = true
deadpool-postgres.workspace = true
futures.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
postgres-native-tls.workspace = true
native-tls.workspace = true
bon.workspace = true

[dev-dependencies]
mockall.workspace = true
cargo-nextest.workspace = true

[lib]
test = true
edition = "2024"
crate-type = ["lib"]
name = "dms_cdc_operator"
