[package]
name = "dms-cdc-operator-client"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "The dms-cdc-operator-client is a Rust-based client for comparing the state of a list of tables in an Amazon RDS database with data stored in Parquet files on Amazon S3, particularly useful for change data capture (CDC) scenarios"
readme = "../README.md"
homepage = "https://github.com/nikoshet/rust-dms-cdc-operator"
repository = "https://github.com/nikoshet/rust-dms-cdc-operator"
keywords = ["postgres", "s3", "cdc", "parquet", "polars"]
documentation = "https://docs.rs/dms-cdc-operator-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"], optional = true }
inquire = { version = "0.7.4", optional = true }
colored = "2.1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
dms-cdc-operator = { version = "0.1.3", path = ".." }
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.21.0"

[features]
default = ["with-inquire"]
with-inquire = ["dep:inquire"]
with-clap = ["dep:clap"]
