[package]
name = "dms-cdc-operator-client"
version = "0.1.13"
edition = "2021"
license = "MIT"
description = "The dms-cdc-operator-client is a Rust-based client for comparing the state of a list of tables in an Amazon RDS database with data stored in Parquet files on Amazon S3, particularly useful for change data capture (CDC) scenarios"
readme = "../README.md"
homepage = "https://github.com/nikoshet/rust-dms-cdc-operator"
repository = "https://github.com/nikoshet/rust-dms-cdc-operator"
keywords = ["postgres", "s3", "cdc", "parquet", "polars"]
documentation = "https://docs.rs/dms-cdc-operator-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
aws-sdk-s3.workspace = true
dms-cdc-operator.workspace = true
clap = { version = "4.5.4", features = ["derive"], optional = true }
inquire = { version = "0.7.4", optional = true }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }

[features]
default = ["with-inquire"]
with-inquire = ["dep:inquire"]
with-clap = ["dep:clap"]
